# word-frequency-in-subreddit

./: README.md  pyproject.toml  reddit_scraper.py
.github/workflows/: image-generator.yaml
csv_files/: post_text.csv  post_title.csv
text_files/: post_id_all.txt  post_text_all.txt  post_title_all.txt
