[tool.poetry]
name = "reddit-scraper"
version = "0.1.0"
description = ""
authors = ["Arturomtz8"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.7"
praw = "^7.6.0"
pandas = "^1.5.0"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
wordcloud = "^1.8.2"
black = "^22.8.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
